Replace list.get(0) with getOnlyElement in tests
`getOnlyElement` is more fool-proof.